--- a/templates/body_list.html
+++ b/templates/body_list.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %} {% block title %}{{ seo_title|default:type }} | IITB
-Tech Council{% endblock %} {% block description %}{{
-seo_description|default:'Explore our technical bodies at IIT Bombay' }}{%
-endblock %} {% block keywords %}{{ seo_keywords|default:'IITB, Tech Bodies,
+Tech Council{% endblock %} {% block description %}
+{{seo_description|default:'Explore our technical bodies at IIT Bombay' }}
+{%endblock %} {% block keywords %}{{ seo_keywords|default:'IITB, Tech Bodies,
 Student Organizations' }}{% endblock %} {% block content %}
 <div
   class="min-h-screen bg-gradient-to-b from-slate-900 via-slate-800 to-slate-900"
